infrastructure/headlamp/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: headlamp
  labels:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: nutritrack
spec:
  parentRefs:
    - name: nutritrack-gateway
      namespace: nutritrack-dev
  hostnames:
    - "headlamp.dev.nutritrack360.in"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 4466
