infrastructure/headlamp/templates/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  type: ClusterIP
  selector:
    app: headlamp
  ports:
    - name: http
      port: 4466
      targetPort: 4466
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: headlamp
spec:
  parentRefs:
    - name: nutritrack-gateway
      namespace: nutritrack-dev
  hostnames:
    - "headlamp.dev.nutritrack360.in"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 4466
